--- a/src/main/resources/templates/mesa.html
+++ b/src/main/resources/templates/mesa.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" th:href="@{/css/mesa.css}">
 </head>
 <body>
+<style>
 
+</style>
 <nav class="menu-bar">
     <ul>
         <li><a href="/home" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MESERO')">Inicio</a></li>
